Fix login & registration layout problems.

--- a/assets/client/css/login.less
+++ b/assets/client/css/login.less
@@ -57,7 +57,7 @@
   vertical-align: middle;
 
   cursor: pointer;
-  
+
   z-index: 9002;
 }
 
@@ -89,7 +89,7 @@
   border-width: 2px;
 
   padding: 12px;
-  
+
   z-index: 9003;
 }
 
@@ -98,17 +98,17 @@
 
 
 #loginBox {
-    width: 230px;
+    width: 240px;
     height: 175px;
 }
 
-#loginBoxButtons {
+.loginBoxButtons {
   width: 100%;
 
   margin: 10px 0 0 6px;
 }
 
-#loginOk, #loginCancel {
+.loginBoxButtons .standardButton {
   float: left;
 }
 
@@ -138,6 +138,6 @@
 
 
 #registrationBox {
-    width: 230px;
+    width: 240px;
     height: 305px;
 }
