--- a/assets/client/css/styles.less
+++ b/assets/client/css/styles.less
@@ -237,12 +237,12 @@ a {
   color: @headercolor;
   font-size: smaller;
 
-  width: 70px;
-  height: 18px;
+  width: @standardbuttonwidth;
+  height: @standardbuttonheight;
 
   margin: 0 3px 0 3px;
 
-  border-radius: 4px;
+  border-radius: @standardradius;
 
   text-align: center;
 }
@@ -253,7 +253,7 @@ a {
   font-size: 110%;
 
   border-color: darkgrey;
-  border-radius: 3px;
+  border-radius: @standardradius;
   border-style: solid;
   border-width: 1px;
 
