--- a/assets/client/css/theme.less
+++ b/assets/client/css/theme.less
@@ -36,6 +36,10 @@
 
 @ajaxWaitGraphic: "/images/waiting.gif";
 
+// Standard controls...
+@standardradius: 4px;
+@standardbuttonwidth: 74px;
+@standardbuttonheight: 18px;
 
 // Fonts...
 //@fontFamily: Georgia, serif;
